添加商品逻辑
